--- a/apps/main/templates/base.html.twig
+++ b/apps/main/templates/base.html.twig
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column">
   {% include '_blocks/nav_primary.html.twig' %}
 
-  <main class="container">
+  <main class="container my-5">
     {% block content %}{% endblock %}
   </main>
 
