--- a/apps/main/templates/security/registration.html.twig
+++ b/apps/main/templates/security/registration.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div class="row mt-5">
-    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+    <div class="col-md-6 col-lg-4">
       <h1 class="mb-4">Sign Up</h1>
 
       {% include 'security/_social_login.html.twig' %}
